--- a/css/rectangle/rectangle.scss
+++ b/css/rectangle/rectangle.scss
@@ -346,7 +346,7 @@ $duration) {
         position: absolute;
         transform-origin: 19.8% 95%;
         height: 97.59px;
-        //transition: 1s linear transform;
+        transition: 1s linear transform;
         transform: rotate(calc(0deg - 25.5deg));
     }
     &-comet {
@@ -407,11 +407,30 @@ $duration) {
             animation: move-twink-back 250s linear infinite;
         }
     }
+    &-nav {
+        position: absolute;
+        color: black;
+        text-align: right;
+        top: 50px;
+        right: 150px;
+        background: white;
+        &-title{
+            @include shorttText();
+        }
+        &-button{
+            @include shorttText();
+            cursor: pointer;
+            transition: opacity .25s linear;
+            &:hover{
+                opacity: .6;
+            }
+        }
+    }
     &-unit {
         &-gallery {
             position: absolute;
-            top: 30%;
-            left: 30%;
+            top: 20%;
+            left: 15%;
             transform: translateX(-50%) translateY(-50%);
             width: 300px;
             height: 300px;
@@ -433,8 +452,8 @@ $duration) {
             position: absolute;
             width: 300px;
             height: 300px;
-            top: 50%;
-            left: 60%;
+            top: 60%;
+            left: 35%;
         }
         &-blackhole {
             height: 100vh;
@@ -443,7 +462,6 @@ $duration) {
             display: flex;
             &>canvas {
                 position: relative;
-                z-index: 1;
                 width: 100%;
                 height: 100%;
                 margin: auto;
@@ -454,11 +472,11 @@ $duration) {
                 background-color: transparent;
                 border-radius: 50%;
                 position: absolute;
-                left: 50%;
-                top: 50%;
+                left: 38%;
+                top: 38%;
                 margin-top: -128px;
                 margin-left: -128px;
-                z-index: 2;
+                z-index: 1;
                 cursor: pointer;
                 line-height: 255px;
                 text-align: center;
